--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "app1"]
 	path = app1
 	url = git@github.com:udistrital/php-microservice-example.git
+[submodule "app2"]
+	path = app2
+	url = git@github.com:udistrital/php-nanoserivce-example.git
